syntax = "proto3";
package microtick.msg;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "gitlab.com/microtick/mtzone/x/microtick/msg";

message TxCreateQuote {
  
  string market = 1 [
    (gogoproto.jsontag) = "market"
  ];
  
  string duration = 2 [
    (gogoproto.jsontag) = "duration"
  ];
  
  bytes provider = 3 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "provider"
  ];
  
  string backing = 4 [
    (gogoproto.jsontag) = "backing"
  ];  
  
  cosmos.base.v1beta1.DecCoin spot = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "spot"
  ];  
  
  cosmos.base.v1beta1.DecCoin ask = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "ask"
  ];  
  
  cosmos.base.v1beta1.DecCoin bid = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "bid"
  ];  
  
}

message CreateQuoteData {
  
  uint32 id = 1 [
    (gogoproto.jsontag) = "id"
  ];
  
  bytes account = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag) = "account"
  ];
  
  string market = 3 [
    (gogoproto.jsontag) = "market"
  ];
  
  string duration = 4 [
    (gogoproto.jsontag) = "duration"
  ];
  
  cosmos.base.v1beta1.DecCoin spot = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "spot"
  ];  
  
  cosmos.base.v1beta1.DecCoin ask = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "ask"
  ];  
  
  cosmos.base.v1beta1.DecCoin bid = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "bid"
  ];  
  
  cosmos.base.v1beta1.DecCoin consensus = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "consensus"
  ];  
  
  int64 time = 9 [
    (gogoproto.jsontag) = "time"
  ];
  
  cosmos.base.v1beta1.DecCoin backing = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "backing"
  ];  
  
  cosmos.base.v1beta1.DecCoin commission = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "commission"
  ];  
  
}
